# magic

./: Makefile  pyproject.toml
magic/: app.py  consts.py  game.py  handlers.py  models.py  server.py  types.py  utils.py
static/: index.html  script.js
